Fix 15-30 minute appointment overlapping

--- a/src/app/home/dashboard/weekly_overview.module.scss
+++ b/src/app/home/dashboard/weekly_overview.module.scss
@@ -130,6 +130,9 @@
 
   width: calc(100% - 34px);
 
+  overflow: hidden;
+
+
   z-index: 1;
 
   p {
